# garage-trip-2020-cipher-game

./: CMakeLists.txt  readme.md
inputs/: 1-preface.txt  1.txt  2-preface.txt  2.txt  3-preface.txt  3.txt  4-preface.txt  4.txt  5-preface.txt  5.txt  6-preface.txt  6-solution.txt  6-task.txt  6.txt  7-config.txt  7-preface.txt  7.txt
outputs/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  notes.html
sources/: 1-maly-polsky-kriz.cpp  1.cpp  2-alphabetizet-words.cpp  2-az.cpp  2-chinese.cpp  3-alphabetizet-words.cpp  3-chinese.cpp  4-shifting-caesar.cpp  4-turtle.cpp  5-shifting-caesar.cpp  5-turtle.cpp  6-sudoku.cpp  7-enigma.cpp  7-kviz.cpp  8-enigma.cpp  8-kviz.cpp  common.cpp  common.h  main.cpp
